third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/diagnostic-not-implemented-from-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-from-bytes.rs:18:24
   |
18 |     takes_from_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |
   = note: Consider adding `#[derive(FromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::FromBytes`:
             ()
             AU16
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and $N others
note: required by a bound in `takes_from_bytes`
  --> tests/ui-nightly/diagnostic-not-implemented-from-bytes.rs:21:24
   |
21 | fn takes_from_bytes<T: FromBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_bytes`
